# magritte

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  build.rs  coverage.sh  distance.sql  dump.txt  rustfmt.toml
conf/: app_core.toml  distance.sql  fluent_handlers.rs  handler_definitions.rs  knowledge_handlers.rs  magritte.toml  prepare_run.sql
conf/database_request_functions/: distance_from_coastline.sql  distance_from_ports.sql  ship_type.sql
conf/fluent_handlers/: location.rs
harvester/: Cargo.toml
harvester/src/: main.rs
misc/: architecture.drawio  logo.xcf
proto/: dylonet.proto
sql/: datapoints.sql  feeder.sql
src/: app_init.rs  broker.rs  cli.rs  collector.rs  config.rs  context.rs  database_handler.rs  datapoint.rs  dispatcher.rs  evalresult.rs  feeder.rs  fluent.rs  harvester.rs  knowledge.rs  lib.rs  magritte.rs  main.rs  prep.rs  sink.rs  source.rs  sourcebroker.rs  state.rs  types.rs  util.rs
src/app_core/: app_core.rs  broker.rs  database.rs  database_connector.rs  mod.rs  node.rs  prepare_run.sql  sink.rs  source.rs  util.rs
src/app_core/sql/: sink.sql  source.sql
src/fluent/: any_fluent.rs  eval_fn.rs  fluent.rs  fluent_handler.rs  fluent_value.rs  fluents.rs  fluents_logic.rs  inner_fluent.rs  mod.rs  neutral_fluent.rs  update.rs  value_type.rs
src/fluent.OLD/: mod.rs
src/handler/: context.rs  eval_fn.rs  handler.rs  mod.rs
src/nodes/: fluent_handler.rs  knowledge_handler.rs  mod.rs  node.rs  sink.rs  source.rs
src/nodes/fluent_handler/: context.rs  eval_fn.rs  handler.rs  mod.rs
src/services/: broker.rs  mod.rs  node.rs  sink.rs  sink.sql  source.rs
src/sql/: prepare_run.sql
