# Copyright 2021 Florian Eich <florian@bmc-labs.com>
#
# This work is licensed under the Apache License, Version 2.0. You should have
# received a copy of this license along with the source code. If that is not
# the case, please find one at http://www.apache.org/licenses/LICENSE-2.0.

[package]
name = "magritte"
description = "Ceci n'est pas une pipe"
version = "0.1.0"
authors = ["Florian Eich <florian@bmc-labs.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
color-eyre = "0.5"
docopt = "1.1"
eyre = "0.6"
getset = "0.1"
# strum = { version = "0.19", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.2"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.2"

# proto
tonic = "0.5"
prost = "0.8"

# serde
serde = { version = "1.0", features = ["derive"] }
# serde_cbor = "0.11"
serde_json = "1.0"


[build-dependencies]
tonic-build = "0.5"
