# Copyright 2022 Florian Eich <florian.eich@gmail.com>
#
# This work is licensed under the Apache License, Version 2.0. You should have
# received a copy of this license along with the source code. If that is not
# the case, please find one at http://www.apache.org/licenses/LICENSE-2.0.

[package]
name = "magritte"
description = "Ceci n'est pas une pipe"
version = "0.1.0"
authors = ["Florian Eich <florian@bmc-labs.com>"]
edition = "2018"


[dependencies]
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.0", features = ["derive"] }
color-eyre = "0.6"
eyre = "0.6"
getset = "0.1"
indoc = "1.0"
pretty_assertions = "1.2"
# strum = { version = "0.24", features = ["derive"] }

# tokio
tokio = { version = "1", features = ["full", "tracing"] }
tokio-postgres = "0.7"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
console-subscriber = "0.1"

# serde
serde = { version = "1.0", features = ["derive"] }
# serde_cbor = "0.11"
# serde_json = "1.0"
